--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,33 @@
     @apply border-2 border-solid border-green-300 px-1 py-2 rounded-md w-full
   }
 }
+
+@layer{
+  .loader {
+    width: 20px;
+    aspect-ratio: 1;
+    display: grid;
+    border-radius: 50%;
+    background:
+      linear-gradient(0deg ,rgba(250, 249, 249, 0.5) 30%,#ebe3e300 0 70%,rgb(240, 236, 236) 0) 50%/8% 100%,
+      linear-gradient(90deg,rgba(237, 234, 234, 0.25) 30%,#f3ebeb00 0 70%,rgba(242, 237, 237, 0.75) 0) 50%/100% 8%;
+    background-repeat: no-repeat;
+    animation: l23 1s infinite steps(12);
+  }
+  .loader::before,
+  .loader::after {
+     content: "";
+     grid-area: 1/1;
+     border-radius: 50%;
+     background: inherit;
+     opacity: 0.915;
+     transform: rotate(30deg);
+  }
+  .loader::after {
+     opacity: 0.83;
+     transform: rotate(60deg);
+  }
+  @keyframes l23 {
+    100% {transform: rotate(1turn)}
+  }
+}
